pseudo el not visible due to width fix

--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,8 @@
 
 /* Contents */
 .contents {
+	max-width: 100%;
+	width: 100%;
 	padding-left: 1.5em;
 	padding-right: 0.1em;
 	grid-column: 4 / 5;
@@ -173,6 +175,7 @@
 		position: static;
 		grid-column: 3 / 4;
 		padding: 2em 0 0 2em;
+		width: auto;
 		height: unset;
 	}
 }
